Project Cards Overlap Fixed

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -25,6 +25,12 @@
             position: absolute;
             -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
             mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+
+        .about_img.active {
+            opacity: 1;
         }
     
         .about_left {
